# RoundingErrorEstimation

./: .editorconfig  .gitignore  README.md  pyproject.toml
appmax/: __main__.py  dataset_prepare.py  evaluation.py  experiment.py  logger.py  network_train.py  neurons.py  optimization.py  optimize.py  quant_utils.py  quantization.py  solving.py  test.py  trainable.py  visualization.py
appmax/applications/: __init__.py  california_housing.py  energy_efficiency.py  mnist.py  utkface.py  year_prediction.py
lin_opt/conv2dense/: max_pooling_to_fully_connected.py
lin_opt_replication/: dataset.py  linear_utils.py  main.py  network.py  preprocessing.py  quant_utils.py  requirements.txt  stats.txt  train.py
lin_opt_replication/results/: results_0_10000.csv  results_0_10_8bits.csv  results_0_50-own.csv  results_0_50.csv
tests/: test_describe.py  test_evaluation.py  test_mean_width.py  test_neurons.py  test_optimize.py  test_quantization.py
