[project]
name = "rounding-error-estimation"
version = "0.1.0"
description = "Python implementation of the AppMax method"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
