[project]
name = "rounding-error-estimation"
version = "0.1.0"
description = "Python implementation of the AppMax method"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.2",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "types-tqdm>=4.67.3.20260303",
]

[tool.uv]
package = true

[project.scripts]
appmax = "appmax.__main__:main"

[tool.setuptools]
packages = ["appmax"]
