[project]
name = "rounding-error-estimation"
version = "0.1.0"
description = "Python implementation of the AppMax method"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "gurobipy>=13.0.1",
    "joblib>=1.5.3",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "scipy-stubs>=1.17.1.2",
    "types-tqdm>=4.67.3.20260303",
]

[tool.setuptools]
packages = ["appmax"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "torchvision.*",
    "sklearn.*",
    "joblib.*"
]
ignore_missing_imports = true
